Fixed background url for Phonegap. Removed checking in index.html for Phonegap

--- a/source/css/App.less
+++ b/source/css/App.less
@@ -51,7 +51,7 @@
 /* Background */
 
 .wallpaper {
-	background: url(/assets/bg.png);
+	background: url(assets/bg.png);
 }
 
 /* Basement */
